- Include improvements to integer decoder from SVN trunk.
  They have been accidentally promised on 1.8.0 release announcements, though they were not there. Here it is: ISO compliant fixed point decoding (speed optimizations are still reserved for next release).
- Fixed build with ./configure --enable-modules (bug in configure script).
- Fix name of binary in help screen when called with path.

1.8.0 (The Taihei Monmament)
---

- New and improved SSE optimizations! For x86-64, too! Also AltiVec! Fast float output! Faster stereo!
  Finally, this should put mpg123 into the efficiency-leading position on current hardware!
  Thanks go out to Taihei Monma for pushing lots of new assembler code.
- Added proper rounding modes to 16bit integer.
  - Use ./configure --enable-int-quality to prefer accuracy over speed.
  - Accurate code (generic, SSE, 3dnow -- i586 has always been good) delivers ISO compliant quality with 16bit output.
  - Uses fast rounding for IEEE754 floats.
  - Mpg123 can do fully ISO compliant MPEG audio decoding to 16bits (of course to 32bit float/int, too).
- subtle performance enhancements via broader data alignment
- Prefer SSE code over 3DNowExt.
  - It can be tight, but generally our new SSE code is better on CPUs that can do both.
- Remove HF cutoff (SFB21), has been introduced in 0.59r .
- Fix layer 1 regression (been there since version 1.x).
  - Layer 1 ISO compliance test is positive now.
- Fix layer 2 regression (false positives header change).
  - Layer 2 ISO compliance test is positive now.
- more sample-accurateness
  - Clear frame buffers before seek.
  - Decode 4 frames in advance for layer 3 (2 for layer 1 and 2) per default.
  - Number of layer 3 frames to decoded in advance (and fill bit reservoir) is runtime tunable (--preframes).
- Do not stop decoding after stray ID3v1 tags in streams (bug 2793677).
- Fix handling of negative RVA2 values in ID3v2 (bug 2792417).
- Discard bitreservoir of previous frames if a resync is needed.